// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attachment Every unknown URL should return a 404 even if it's substring matches a path 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/undefined/post-1/": Object {
      "errorStatus": 404,
      "errorStatusText": "You have tried to access content at route: /undefined/post-1/ but it does not exist",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
      "link": "/undefined/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/undefined/post-1/",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`attachment Every unknown URL should return a 404 even if it's substring matches a path 2 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/does/not/exist/": Object {
      "errorStatus": 404,
      "errorStatusText": "You have tried to access content at route: /does/not/exist/ but it does not exist",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
      "link": "/does/not/exist/",
      "page": 1,
      "query": Object {},
      "route": "/does/not/exist/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`attachment doesn't exist in source.attachment 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isAttachment": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`attachment exists in source.attachment 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isAttachment": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`attachment overwrites the data when fetched with { force: true } 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 2,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 2,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`attachment works with query params (doesn't exist in source.attachment) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/post-1/attachment-1/?some=param": Object {
      "id": 1,
      "isAttachment": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/attachment-1/?some=param",
      "page": 1,
      "query": Object {
        "some": "param",
      },
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`attachment works with query params (exists in source.attachment) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/post-1/attachment-1/?some=param": Object {
      "id": 1,
      "isAttachment": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/attachment-1/?some=param",
      "page": 1,
      "query": Object {
        "some": "param",
      },
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`page can have a parent 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/parent/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "link": "/parent/page-1/",
      "page": 1,
      "query": Object {},
      "route": "/parent/page-1/",
      "type": "page",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "up": Array [
          Object {
            "id": 2,
            "link": "https://test.frontity.org/parent/",
            "slug": "parent",
          },
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/parent/page-1/",
      "parent": 2,
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`page doesn't exist in source.page 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "link": "/page-1/",
      "page": 1,
      "query": Object {},
      "route": "/page-1/",
      "type": "page",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`page exists in source.page 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "link": "/page-1/",
      "page": 1,
      "query": Object {},
      "route": "/page-1/",
      "type": "page",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`page works with query params (doesn't exist in source.page) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/page-1/",
      "page": 1,
      "query": Object {},
      "route": "/page-1/",
      "type": "page",
    },
    "/page-1/?some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "link": "/page-1/?some=param",
      "page": 1,
      "query": Object {
        "some": "param",
      },
      "route": "/page-1/",
      "type": "page",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`page works with query params (exists in source.page) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/page-1/",
      "page": 1,
      "query": Object {},
      "route": "/page-1/",
      "type": "page",
    },
    "/page-1/?some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "link": "/page-1/?some=param",
      "page": 1,
      "query": Object {
        "some": "param",
      },
      "route": "/page-1/",
      "type": "page",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post applies the latest revision if it is a preview 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "auth": "Bearer TOKEN",
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/?preview=true": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/?preview=true",
      "page": 1,
      "query": Object {
        "preview": "true",
      },
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "content": Object {
        "rendered": "Content from revision 11",
      },
      "excerpt": Object {
        "rendered": "Excerpt from revision 11",
      },
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "title": Object {
        "rendered": "Title from revision 11",
      },
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post doesn't exist in source.post 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post exists in source.post 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post fetchs from a different endpoint with extra params 1`] = `
Array [
  Array [
    Object {
      "endpoint": "cpts",
      "params": Object {
        "_embed": true,
        "slug": "cpt-11",
        "type": Array [
          "post",
          "cpt",
        ],
      },
    },
  ],
]
`;

exports[`post fetchs from a different endpoint with extra params 2`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "12": Object {
      "author": 1,
      "id": 12,
      "link": "/cpt/cpt-11/attachment-cpt-11/",
      "slug": "attachment-cpt-11",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "cpt": Object {
    "11": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          12,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 12,
      "id": 11,
      "link": "/cpt/cpt-11/",
      "slug": "cpt-11",
      "tags": Array [
        1,
      ],
      "type": "cpt",
    },
  },
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/cpt/cpt-11/": Object {
      "id": 11,
      "isCpt": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "link": "/cpt/cpt-11/",
      "page": 1,
      "query": Object {},
      "route": "/cpt/cpt-11/",
      "type": "cpt",
    },
    "/cpt/cpt-11/attachment-cpt-11/": Object {
      "id": 12,
      "isFetching": false,
      "isReady": false,
      "link": "/cpt/cpt-11/attachment-cpt-11/",
      "page": 1,
      "query": Object {},
      "route": "/cpt/cpt-11/attachment-cpt-11/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {
    "type": Array [
      "post",
      "cpt",
    ],
  },
  "post": Object {},
  "postEndpoint": "multiple-post-type",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post ignores the preview parameter if there is no auth token 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/?preview=true": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/?preview=true",
      "page": 1,
      "query": Object {
        "preview": "true",
      },
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post populates an error if it is a preview with an invalid token 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "auth": "Bearer INVALID",
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/?preview=true": Object {
      "errorStatus": 403,
      "errorStatusText": "Forbidden",
      "is403": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
      "link": "/post-1/?preview=true",
      "page": 1,
      "query": Object {
        "preview": "true",
      },
      "route": "/post-1/",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post works with query params (doesn't exist in source.post) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/?some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/?some=param",
      "page": 1,
      "query": Object {
        "some": "param",
      },
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post works with query params (exists in source.post) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/?some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/?some=param",
      "page": 1,
      "query": Object {
        "some": "param",
      },
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post works with types embedded 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
    "undefined": Object {
      "isFetching": false,
      "isReady": false,
      "link": undefined,
      "page": 1,
      "query": Object {},
      "route": undefined,
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "type": Array [
          "post",
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {
    "post": Object {
      "description": "",
      "hierarchical": false,
      "name": "Posts",
      "slug": "post",
      "taxonomies": Array [
        "category",
        "tag",
      ],
    },
  },
  "url": "https://test.frontity.org",
}
`;

exports[`postType returns 404 if not found 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/non-existent/": Object {
      "errorStatus": 404,
      "errorStatusText": "post type from endpoints \\"posts,pages,media\\" with slug \\"non-existent\\" not found",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
      "link": "/non-existent/",
      "page": 1,
      "query": Object {},
      "route": "/non-existent/",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`postType should contain the correct error code on error 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/": Object {
      "errorStatus": 400,
      "errorStatusText": "statusText",
      "is400": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "archive": "/cpt",
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;
